src/snapshots/aidl_parser__tests__type_array.snap
---
source: src/lib.rs
expression: res

---
Type(
  name: "Array",
  kind: Array,
  generic_types: [
    Type(
      name: "float",
      kind: Primitive,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
