src/snapshots/aidl_parser__tests__type_custom.snap
---
source: src/lib.rs
expression: res

---
Type(
  name: "TypeName",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
