src/snapshots/aidl_parser__tests__type_custom_with_namespace.snap
---
source: src/lib.rs
expression: res

---
Type(
  name: "com.example.TypeName",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
