src/snapshots/aidl_parser__tests__type_list.snap
---
source: src/lib.rs
expression: res

---
Type(
  name: "List",
  kind: List,
  generic_types: [
    Type(
      name: "MyObject",
      kind: Custom,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
