src/snapshots/aidl_parser__tests__type_primitive1.snap
---
source: src/lib.rs
expression: res

---
Type(
  name: "double",
  kind: Primitive,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
