src/snapshots/aidl_parser__tests__type_primitive2.snap
---
source: src/lib.rs
expression: res

---
Type(
  name: "doublegum",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
